# xr

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
skills/research-x/: SKILL.md
src/xr/: __init__.py  api.py  auth.py  cache.py  cli.py  config.py  models.py
src/xr/commands/: __init__.py  article.py  counts.py  followers.py  mentions.py  search.py  thread.py  timeline.py  tweet.py  user.py
src/xr/formatters/: __init__.py  json_fmt.py  markdown.py
tests/: conftest.py  test_api.py  test_auth.py  test_cache.py  test_cli.py  test_commands.py  test_config.py  test_formatters.py  test_models.py
