[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xr-cli"
version = "0.1.0"
description = "X (Twitter) research CLI — search, profile, timeline, cache"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Hernan Carlos Caravario", email = "hernan@hernancc.com" }
]
keywords = ["twitter", "x", "research", "cli", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
]
dependencies = [
    "click>=8.0",
    "requests>=2.28",
]

[project.scripts]
xr = "xr.cli:main"

[project.urls]
Repository = "https://github.com/hernan-cc/xr"

[tool.hatch.build.targets.wheel]
packages = ["src/xr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
